pmcp-macros/tests/snapshots/expansion_snapshots__snapshot_expand_mcp_prompt.snap
---
source: pmcp-macros/tests/expansion_snapshots.rs
assertion_line: 97
expression: expanded
---
#![feature(prelude_import)]
//! Snapshot fixture for `#[mcp_prompt]` (Phase 75 Wave 0 Task 1).
//!
//! Captures the macro output for a typed-args prompt so Wave 1b can detect any
//! expansion drift via `cargo insta accept`.
extern crate std;
#[prelude_import]
use std::prelude::rust_2021::*;
use pmcp::types::{Content, GetPromptResult, PromptMessage};
use pmcp_macros::mcp_prompt;
use schemars::JsonSchema;
use serde::Deserialize;
struct ReviewArgs {
    language: String,
    code: String,
}
#[automatically_derived]
impl ::core::fmt::Debug for ReviewArgs {
    #[inline]
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field2_finish(
            f,
            "ReviewArgs",
            "language",
            &self.language,
            "code",
            &&self.code,
        )
    }
}
#[doc(hidden)]
#[allow(
    non_upper_case_globals,
    unused_attributes,
    unused_qualifications,
    clippy::absolute_paths,
)]
const _: () = {
    #[allow(unused_extern_crates, clippy::useless_attribute)]
    extern crate serde as _serde;
    #[automatically_derived]
    impl<'de> _serde::Deserialize<'de> for ReviewArgs {
        fn deserialize<__D>(
            __deserializer: __D,
        ) -> _serde::__private228::Result<Self, __D::Error>
        where
            __D: _serde::Deserializer<'de>,
        {
            #[allow(non_camel_case_types)]
            #[doc(hidden)]
            enum __Field {
                __field0,
                __field1,
                __ignore,
            }
            #[doc(hidden)]
            struct __FieldVisitor;
            #[automatically_derived]
            impl<'de> _serde::de::Visitor<'de> for __FieldVisitor {
                type Value = __Field;
                fn expecting(
                    &self,
                    __formatter: &mut _serde::__private228::Formatter,
                ) -> _serde::__private228::fmt::Result {
                    _serde::__private228::Formatter::write_str(
                        __formatter,
                        "field identifier",
                    )
                }
                fn visit_u64<__E>(
                    self,
                    __value: u64,
                ) -> _serde::__private228::Result<Self::Value, __E>
                where
                    __E: _serde::de::Error,
                {
                    match __value {
                        0u64 => _serde::__private228::Ok(__Field::__field0),
                        1u64 => _serde::__private228::Ok(__Field::__field1),
                        _ => _serde::__private228::Ok(__Field::__ignore),
                    }
                }
                fn visit_str<__E>(
                    self,
                    __value: &str,
                ) -> _serde::__private228::Result<Self::Value, __E>
                where
                    __E: _serde::de::Error,
                {
                    match __value {
                        "language" => _serde::__private228::Ok(__Field::__field0),
                        "code" => _serde::__private228::Ok(__Field::__field1),
                        _ => _serde::__private228::Ok(__Field::__ignore),
                    }
                }
                fn visit_bytes<__E>(
                    self,
                    __value: &[u8],
                ) -> _serde::__private228::Result<Self::Value, __E>
                where
                    __E: _serde::de::Error,
                {
                    match __value {
                        b"language" => _serde::__private228::Ok(__Field::__field0),
                        b"code" => _serde::__private228::Ok(__Field::__field1),
                        _ => _serde::__private228::Ok(__Field::__ignore),
                    }
                }
            }
            #[automatically_derived]
            impl<'de> _serde::Deserialize<'de> for __Field {
                #[inline]
                fn deserialize<__D>(
                    __deserializer: __D,
                ) -> _serde::__private228::Result<Self, __D::Error>
                where
                    __D: _serde::Deserializer<'de>,
                {
                    _serde::Deserializer::deserialize_identifier(
                        __deserializer,
                        __FieldVisitor,
                    )
                }
            }
            #[doc(hidden)]
            struct __Visitor<'de> {
                marker: _serde::__private228::PhantomData<ReviewArgs>,
                lifetime: _serde::__private228::PhantomData<&'de ()>,
            }
            #[automatically_derived]
            impl<'de> _serde::de::Visitor<'de> for __Visitor<'de> {
                type Value = ReviewArgs;
                fn expecting(
                    &self,
                    __formatter: &mut _serde::__private228::Formatter,
                ) -> _serde::__private228::fmt::Result {
                    _serde::__private228::Formatter::write_str(
                        __formatter,
                        "struct ReviewArgs",
                    )
                }
                #[inline]
                fn visit_seq<__A>(
                    self,
                    mut __seq: __A,
                ) -> _serde::__private228::Result<Self::Value, __A::Error>
                where
                    __A: _serde::de::SeqAccess<'de>,
                {
                    let __field0 = match _serde::de::SeqAccess::next_element::<
                        String,
                    >(&mut __seq)? {
                        _serde::__private228::Some(__value) => __value,
                        _serde::__private228::None => {
                            return _serde::__private228::Err(
                                _serde::de::Error::invalid_length(
                                    0usize,
                                    &"struct ReviewArgs with 2 elements",
                                ),
                            );
                        }
                    };
                    let __field1 = match _serde::de::SeqAccess::next_element::<
                        String,
                    >(&mut __seq)? {
                        _serde::__private228::Some(__value) => __value,
                        _serde::__private228::None => {
                            return _serde::__private228::Err(
                                _serde::de::Error::invalid_length(
                                    1usize,
                                    &"struct ReviewArgs with 2 elements",
                                ),
                            );
                        }
                    };
                    _serde::__private228::Ok(ReviewArgs {
                        language: __field0,
                        code: __field1,
                    })
                }
                #[inline]
                fn visit_map<__A>(
                    self,
                    mut __map: __A,
                ) -> _serde::__private228::Result<Self::Value, __A::Error>
                where
                    __A: _serde::de::MapAccess<'de>,
                {
                    let mut __field0: _serde::__private228::Option<String> = _serde::__private228::None;
                    let mut __field1: _serde::__private228::Option<String> = _serde::__private228::None;
                    while let _serde::__private228::Some(__key)
                        = _serde::de::MapAccess::next_key::<__Field>(&mut __map)? {
                        match __key {
                            __Field::__field0 => {
                                if _serde::__private228::Option::is_some(&__field0) {
                                    return _serde::__private228::Err(
                                        <__A::Error as _serde::de::Error>::duplicate_field(
                                            "language",
                                        ),
                                    );
                                }
                                __field0 = _serde::__private228::Some(
                                    _serde::de::MapAccess::next_value::<String>(&mut __map)?,
                                );
                            }
                            __Field::__field1 => {
                                if _serde::__private228::Option::is_some(&__field1) {
                                    return _serde::__private228::Err(
                                        <__A::Error as _serde::de::Error>::duplicate_field("code"),
                                    );
                                }
                                __field1 = _serde::__private228::Some(
                                    _serde::de::MapAccess::next_value::<String>(&mut __map)?,
                                );
                            }
                            _ => {
                                let _ = _serde::de::MapAccess::next_value::<
                                    _serde::de::IgnoredAny,
                                >(&mut __map)?;
                            }
                        }
                    }
                    let __field0 = match __field0 {
                        _serde::__private228::Some(__field0) => __field0,
                        _serde::__private228::None => {
                            _serde::__private228::de::missing_field("language")?
                        }
                    };
                    let __field1 = match __field1 {
                        _serde::__private228::Some(__field1) => __field1,
                        _serde::__private228::None => {
                            _serde::__private228::de::missing_field("code")?
                        }
                    };
                    _serde::__private228::Ok(ReviewArgs {
                        language: __field0,
                        code: __field1,
                    })
                }
            }
            #[doc(hidden)]
            const FIELDS: &'static [&'static str] = &["language", "code"];
            _serde::Deserializer::deserialize_struct(
                __deserializer,
                "ReviewArgs",
                FIELDS,
                __Visitor {
                    marker: _serde::__private228::PhantomData::<ReviewArgs>,
                    lifetime: _serde::__private228::PhantomData,
                },
            )
        }
    }
};
const _: () = {
    #[automatically_derived]
    #[allow(unused_braces)]
    impl schemars::JsonSchema for ReviewArgs {
        fn schema_name() -> schemars::_private::alloc::borrow::Cow<'static, str> {
            schemars::_private::alloc::borrow::Cow::Borrowed("ReviewArgs")
        }
        fn schema_id() -> schemars::_private::alloc::borrow::Cow<'static, str> {
            schemars::_private::alloc::borrow::Cow::Borrowed(
                "example_mcp_prompt_fixture::ReviewArgs",
            )
        }
        fn json_schema(generator: &mut schemars::SchemaGenerator) -> schemars::Schema {
            {
                let mut schema = <::schemars::Schema as ::core::convert::TryFrom::<
                    _,
                >>::try_from(
                        ::serde_json::Value::Object({
                            let mut object = ::serde_json::Map::new();
                            let _ = object
                                .insert(
                                    ("type").into(),
                                    ::serde_json::to_value(&"object").unwrap(),
                                );
                            object
                        }),
                    )
                    .unwrap();
                {
                    schemars::_private::insert_object_property(
                        &mut schema,
                        "language",
                        generator.contract().is_deserialize()
                            && <String as schemars::JsonSchema>::_schemars_private_is_option(),
                        { generator.subschema_for::<String>() },
                    );
                }
                {
                    schemars::_private::insert_object_property(
                        &mut schema,
                        "code",
                        generator.contract().is_deserialize()
                            && <String as schemars::JsonSchema>::_schemars_private_is_option(),
                        { generator.subschema_for::<String>() },
                    );
                }
                schema
            }
        }
        fn inline_schema() -> bool {
            false
        }
    }
};
async fn __code_review_impl(args: ReviewArgs) -> pmcp::Result<GetPromptResult> {
    Ok(
        GetPromptResult::new(
            ::alloc::boxed::box_assume_init_into_vec_unsafe(
                ::alloc::intrinsics::write_box_via_move(
                    ::alloc::boxed::Box::new_uninit(),
                    [
                        PromptMessage::user(
                            Content::text(
                                ::alloc::__export::must_use({
                                    ::alloc::fmt::format(
                                        format_args!(
                                            "Review this {0} code:\n{1}", args.language, args.code
                                        ),
                                    )
                                }),
                            ),
                        ),
                    ],
                ),
            ),
            Some("Code review".to_string()),
        ),
    )
}
/// Auto-generated prompt handler for the `#fn_name` MCP prompt.
///
/// **Note:** MCP prompt arguments are string-only. Struct fields should use
/// `String` or `Option<String>`. Non-string types (`i32`, `bool`, etc.) will
/// fail deserialization. Use `#[serde(deserialize_with)]` for custom parsing.
pub struct CodeReviewPrompt {}
#[automatically_derived]
impl ::core::clone::Clone for CodeReviewPrompt {
    #[inline]
    fn clone(&self) -> CodeReviewPrompt {
        CodeReviewPrompt {}
    }
}
impl std::fmt::Debug for CodeReviewPrompt {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        f.debug_struct("CodeReviewPrompt").finish()
    }
}
impl pmcp::PromptHandler for CodeReviewPrompt {
    #[allow(
        elided_named_lifetimes,
        clippy::async_yields_async,
        clippy::diverging_sub_expression,
        clippy::let_unit_value,
        clippy::needless_arbitrary_self_type,
        clippy::no_effect_underscore_binding,
        clippy::shadow_same,
        clippy::type_complexity,
        clippy::type_repetition_in_bounds,
        clippy::used_underscore_binding
    )]
    fn handle<'life0, 'async_trait>(
        &'life0 self,
        args: std::collections::HashMap<String, String>,
        _extra: pmcp::RequestHandlerExtra,
    ) -> ::core::pin::Pin<
        Box<
            dyn ::core::future::Future<
                Output = pmcp::Result<pmcp::types::GetPromptResult>,
            > + ::core::marker::Send + 'async_trait,
        >,
    >
    where
        'life0: 'async_trait,
        Self: 'async_trait,
    {
        Box::pin(async move {
            if let ::core::option::Option::Some(__ret)
                = ::core::option::Option::None::<
                    pmcp::Result<pmcp::types::GetPromptResult>,
                > {
                #[allow(unreachable_code)] return __ret;
            }
            let __self = self;
            let args = args;
            let _extra = _extra;
            let __ret: pmcp::Result<pmcp::types::GetPromptResult> = {
                let typed_args: ReviewArgs = pmcp::server::typed_prompt::deserialize_prompt_args(
                    args,
                    "code_review",
                )?;
                __code_review_impl(typed_args).await
            };
            #[allow(unreachable_code)] __ret
        })
    }
    fn metadata(&self) -> Option<pmcp::types::PromptInfo> {
        let mut info = pmcp::types::PromptInfo::new("code_review")
            .with_description("Review code for issues");
        let schema = ::schemars::SchemaGenerator::default()
            .into_root_schema_for::<ReviewArgs>();
        let json_schema = serde_json::to_value(&schema).unwrap_or_default();
        let arguments = pmcp::server::typed_prompt::extract_prompt_arguments_from_schema(
            &json_schema,
        );
        if !arguments.is_empty() {
            info = info.with_arguments(arguments);
        }
        Some(info)
    }
}
impl CodeReviewPrompt {}
/// Create a new instance of the [`#struct_name`] prompt handler.
///
/// Use this at registration time:
/// ```rust,ignore
/// server_builder.prompt("#prompt_name", #fn_name())
/// ```
pub fn code_review() -> CodeReviewPrompt {
    CodeReviewPrompt {}
}
fn main() {
    let _prompt = code_review();
}
