pmcp-macros/tests/snapshots/expansion_snapshots__snapshot_expand_mcp_tool.snap
---
source: pmcp-macros/tests/expansion_snapshots.rs
assertion_line: 79
expression: expanded
---
#![feature(prelude_import)]
//! Snapshot fixture for `#[mcp_tool]` (Phase 75 Wave 0 Task 1).
//!
//! Captures the macro output for a representative tool with typed args + typed
//! result so Wave 1b can detect any expansion drift via `cargo insta accept`.
extern crate std;
#[prelude_import]
use std::prelude::rust_2021::*;
use pmcp_macros::mcp_tool;
use schemars::JsonSchema;
use serde::{Deserialize, Serialize};
struct EchoArgs {
    message: String,
}
#[automatically_derived]
impl ::core::fmt::Debug for EchoArgs {
    #[inline]
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field1_finish(
            f,
            "EchoArgs",
            "message",
            &&self.message,
        )
    }
}
#[doc(hidden)]
#[allow(
    non_upper_case_globals,
    unused_attributes,
    unused_qualifications,
    clippy::absolute_paths,
)]
const _: () = {
    #[allow(unused_extern_crates, clippy::useless_attribute)]
    extern crate serde as _serde;
    #[automatically_derived]
    impl<'de> _serde::Deserialize<'de> for EchoArgs {
        fn deserialize<__D>(
            __deserializer: __D,
        ) -> _serde::__private228::Result<Self, __D::Error>
        where
            __D: _serde::Deserializer<'de>,
        {
            #[allow(non_camel_case_types)]
            #[doc(hidden)]
            enum __Field {
                __field0,
                __ignore,
            }
            #[doc(hidden)]
            struct __FieldVisitor;
            #[automatically_derived]
            impl<'de> _serde::de::Visitor<'de> for __FieldVisitor {
                type Value = __Field;
                fn expecting(
                    &self,
                    __formatter: &mut _serde::__private228::Formatter,
                ) -> _serde::__private228::fmt::Result {
                    _serde::__private228::Formatter::write_str(
                        __formatter,
                        "field identifier",
                    )
                }
                fn visit_u64<__E>(
                    self,
                    __value: u64,
                ) -> _serde::__private228::Result<Self::Value, __E>
                where
                    __E: _serde::de::Error,
                {
                    match __value {
                        0u64 => _serde::__private228::Ok(__Field::__field0),
                        _ => _serde::__private228::Ok(__Field::__ignore),
                    }
                }
                fn visit_str<__E>(
                    self,
                    __value: &str,
                ) -> _serde::__private228::Result<Self::Value, __E>
                where
                    __E: _serde::de::Error,
                {
                    match __value {
                        "message" => _serde::__private228::Ok(__Field::__field0),
                        _ => _serde::__private228::Ok(__Field::__ignore),
                    }
                }
                fn visit_bytes<__E>(
                    self,
                    __value: &[u8],
                ) -> _serde::__private228::Result<Self::Value, __E>
                where
                    __E: _serde::de::Error,
                {
                    match __value {
                        b"message" => _serde::__private228::Ok(__Field::__field0),
                        _ => _serde::__private228::Ok(__Field::__ignore),
                    }
                }
            }
            #[automatically_derived]
            impl<'de> _serde::Deserialize<'de> for __Field {
                #[inline]
                fn deserialize<__D>(
                    __deserializer: __D,
                ) -> _serde::__private228::Result<Self, __D::Error>
                where
                    __D: _serde::Deserializer<'de>,
                {
                    _serde::Deserializer::deserialize_identifier(
                        __deserializer,
                        __FieldVisitor,
                    )
                }
            }
            #[doc(hidden)]
            struct __Visitor<'de> {
                marker: _serde::__private228::PhantomData<EchoArgs>,
                lifetime: _serde::__private228::PhantomData<&'de ()>,
            }
            #[automatically_derived]
            impl<'de> _serde::de::Visitor<'de> for __Visitor<'de> {
                type Value = EchoArgs;
                fn expecting(
                    &self,
                    __formatter: &mut _serde::__private228::Formatter,
                ) -> _serde::__private228::fmt::Result {
                    _serde::__private228::Formatter::write_str(
                        __formatter,
                        "struct EchoArgs",
                    )
                }
                #[inline]
                fn visit_seq<__A>(
                    self,
                    mut __seq: __A,
                ) -> _serde::__private228::Result<Self::Value, __A::Error>
                where
                    __A: _serde::de::SeqAccess<'de>,
                {
                    let __field0 = match _serde::de::SeqAccess::next_element::<
                        String,
                    >(&mut __seq)? {
                        _serde::__private228::Some(__value) => __value,
                        _serde::__private228::None => {
                            return _serde::__private228::Err(
                                _serde::de::Error::invalid_length(
                                    0usize,
                                    &"struct EchoArgs with 1 element",
                                ),
                            );
                        }
                    };
                    _serde::__private228::Ok(EchoArgs { message: __field0 })
                }
                #[inline]
                fn visit_map<__A>(
                    self,
                    mut __map: __A,
                ) -> _serde::__private228::Result<Self::Value, __A::Error>
                where
                    __A: _serde::de::MapAccess<'de>,
                {
                    let mut __field0: _serde::__private228::Option<String> = _serde::__private228::None;
                    while let _serde::__private228::Some(__key)
                        = _serde::de::MapAccess::next_key::<__Field>(&mut __map)? {
                        match __key {
                            __Field::__field0 => {
                                if _serde::__private228::Option::is_some(&__field0) {
                                    return _serde::__private228::Err(
                                        <__A::Error as _serde::de::Error>::duplicate_field(
                                            "message",
                                        ),
                                    );
                                }
                                __field0 = _serde::__private228::Some(
                                    _serde::de::MapAccess::next_value::<String>(&mut __map)?,
                                );
                            }
                            _ => {
                                let _ = _serde::de::MapAccess::next_value::<
                                    _serde::de::IgnoredAny,
                                >(&mut __map)?;
                            }
                        }
                    }
                    let __field0 = match __field0 {
                        _serde::__private228::Some(__field0) => __field0,
                        _serde::__private228::None => {
                            _serde::__private228::de::missing_field("message")?
                        }
                    };
                    _serde::__private228::Ok(EchoArgs { message: __field0 })
                }
            }
            #[doc(hidden)]
            const FIELDS: &'static [&'static str] = &["message"];
            _serde::Deserializer::deserialize_struct(
                __deserializer,
                "EchoArgs",
                FIELDS,
                __Visitor {
                    marker: _serde::__private228::PhantomData::<EchoArgs>,
                    lifetime: _serde::__private228::PhantomData,
                },
            )
        }
    }
};
const _: () = {
    #[automatically_derived]
    #[allow(unused_braces)]
    impl schemars::JsonSchema for EchoArgs {
        fn schema_name() -> schemars::_private::alloc::borrow::Cow<'static, str> {
            schemars::_private::alloc::borrow::Cow::Borrowed("EchoArgs")
        }
        fn schema_id() -> schemars::_private::alloc::borrow::Cow<'static, str> {
            schemars::_private::alloc::borrow::Cow::Borrowed(
                "example_mcp_tool_fixture::EchoArgs",
            )
        }
        fn json_schema(generator: &mut schemars::SchemaGenerator) -> schemars::Schema {
            {
                let mut schema = <::schemars::Schema as ::core::convert::TryFrom::<
                    _,
                >>::try_from(
                        ::serde_json::Value::Object({
                            let mut object = ::serde_json::Map::new();
                            let _ = object
                                .insert(
                                    ("type").into(),
                                    ::serde_json::to_value(&"object").unwrap(),
                                );
                            object
                        }),
                    )
                    .unwrap();
                {
                    schemars::_private::insert_object_property(
                        &mut schema,
                        "message",
                        generator.contract().is_deserialize()
                            && <String as schemars::JsonSchema>::_schemars_private_is_option(),
                        { generator.subschema_for::<String>() },
                    );
                }
                schema
            }
        }
        fn inline_schema() -> bool {
            false
        }
    }
};
struct EchoResult {
    echoed: String,
}
#[automatically_derived]
impl ::core::fmt::Debug for EchoResult {
    #[inline]
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field1_finish(
            f,
            "EchoResult",
            "echoed",
            &&self.echoed,
        )
    }
}
#[doc(hidden)]
#[allow(
    non_upper_case_globals,
    unused_attributes,
    unused_qualifications,
    clippy::absolute_paths,
)]
const _: () = {
    #[allow(unused_extern_crates, clippy::useless_attribute)]
    extern crate serde as _serde;
    #[automatically_derived]
    impl _serde::Serialize for EchoResult {
        fn serialize<__S>(
            &self,
            __serializer: __S,
        ) -> _serde::__private228::Result<__S::Ok, __S::Error>
        where
            __S: _serde::Serializer,
        {
            let mut __serde_state = _serde::Serializer::serialize_struct(
                __serializer,
                "EchoResult",
                false as usize + 1,
            )?;
            _serde::ser::SerializeStruct::serialize_field(
                &mut __serde_state,
                "echoed",
                &self.echoed,
            )?;
            _serde::ser::SerializeStruct::end(__serde_state)
        }
    }
};
const _: () = {
    #[automatically_derived]
    #[allow(unused_braces)]
    impl schemars::JsonSchema for EchoResult {
        fn schema_name() -> schemars::_private::alloc::borrow::Cow<'static, str> {
            schemars::_private::alloc::borrow::Cow::Borrowed("EchoResult")
        }
        fn schema_id() -> schemars::_private::alloc::borrow::Cow<'static, str> {
            schemars::_private::alloc::borrow::Cow::Borrowed(
                "example_mcp_tool_fixture::EchoResult",
            )
        }
        fn json_schema(generator: &mut schemars::SchemaGenerator) -> schemars::Schema {
            {
                let mut schema = <::schemars::Schema as ::core::convert::TryFrom::<
                    _,
                >>::try_from(
                        ::serde_json::Value::Object({
                            let mut object = ::serde_json::Map::new();
                            let _ = object
                                .insert(
                                    ("type").into(),
                                    ::serde_json::to_value(&"object").unwrap(),
                                );
                            object
                        }),
                    )
                    .unwrap();
                {
                    schemars::_private::insert_object_property(
                        &mut schema,
                        "echoed",
                        generator.contract().is_deserialize()
                            && <String as schemars::JsonSchema>::_schemars_private_is_option(),
                        { generator.subschema_for::<String>() },
                    );
                }
                schema
            }
        }
        fn inline_schema() -> bool {
            false
        }
    }
};
async fn __echo_impl(args: EchoArgs) -> pmcp::Result<EchoResult> {
    Ok(EchoResult { echoed: args.message })
}
/// Auto-generated tool handler for the `#fn_name` MCP tool.
pub struct EchoTool {}
#[automatically_derived]
impl ::core::clone::Clone for EchoTool {
    #[inline]
    fn clone(&self) -> EchoTool {
        EchoTool {}
    }
}
impl std::fmt::Debug for EchoTool {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        f.debug_struct("EchoTool").finish()
    }
}
impl pmcp::ToolHandler for EchoTool {
    #[allow(
        elided_named_lifetimes,
        clippy::async_yields_async,
        clippy::diverging_sub_expression,
        clippy::let_unit_value,
        clippy::needless_arbitrary_self_type,
        clippy::no_effect_underscore_binding,
        clippy::shadow_same,
        clippy::type_complexity,
        clippy::type_repetition_in_bounds,
        clippy::used_underscore_binding
    )]
    fn handle<'life0, 'async_trait>(
        &'life0 self,
        args: serde_json::Value,
        _extra: pmcp::RequestHandlerExtra,
    ) -> ::core::pin::Pin<
        Box<
            dyn ::core::future::Future<
                Output = pmcp::Result<serde_json::Value>,
            > + ::core::marker::Send + 'async_trait,
        >,
    >
    where
        'life0: 'async_trait,
        Self: 'async_trait,
    {
        Box::pin(async move {
            if let ::core::option::Option::Some(__ret)
                = ::core::option::Option::None::<pmcp::Result<serde_json::Value>> {
                #[allow(unreachable_code)] return __ret;
            }
            let __self = self;
            let args = args;
            let _extra = _extra;
            let __ret: pmcp::Result<serde_json::Value> = {
                let typed_args: EchoArgs = serde_json::from_value(args)
                    .map_err(|e| pmcp::Error::invalid_params(
                        ::alloc::__export::must_use({
                            ::alloc::fmt::format(
                                format_args!(
                                    "Invalid arguments for tool \'{0}\': {1}", "echo", e
                                ),
                            )
                        }),
                    ))?;
                let result = __echo_impl(typed_args).await?;
                serde_json::to_value(result)
                    .map_err(|e| pmcp::Error::internal(
                        ::alloc::__export::must_use({
                            ::alloc::fmt::format(
                                format_args!("Failed to serialize result: {0}", e),
                            )
                        }),
                    ))
            };
            #[allow(unreachable_code)] __ret
        })
    }
    fn metadata(&self) -> Option<pmcp::types::ToolInfo> {
        let input_schema = {
            let schema = ::schemars::SchemaGenerator::default()
                .into_root_schema_for::<EchoArgs>();
            let json_schema = serde_json::to_value(&schema)
                .unwrap_or_else(|_| {
                    ::serde_json::Value::Object({
                        let mut object = ::serde_json::Map::new();
                        let _ = object
                            .insert(
                                ("type").into(),
                                ::serde_json::to_value(&"object").unwrap(),
                            );
                        let _ = object
                            .insert(
                                ("properties").into(),
                                ::serde_json::Value::Object(::serde_json::Map::new()),
                            );
                        object
                    })
                });
            pmcp::server::schema_utils::normalize_schema(json_schema)
        };
        let output_schema: Option<serde_json::Value> = {
            let schema = ::schemars::SchemaGenerator::default()
                .into_root_schema_for::<EchoResult>();
            Some(
                serde_json::to_value(&schema)
                    .unwrap_or_else(|_| {
                        ::serde_json::Value::Object({
                            let mut object = ::serde_json::Map::new();
                            let _ = object
                                .insert(
                                    ("type").into(),
                                    ::serde_json::to_value(&"object").unwrap(),
                                );
                            object
                        })
                    }),
            )
        };
        let mut info = pmcp::types::ToolInfo::new(
            "echo",
            Some("Echo a message back to the caller".to_string()),
            input_schema,
        );
        if let Some(schema) = output_schema {
            info = info.with_output_schema(schema);
        }
        Some(info)
    }
}
impl EchoTool {}
/// Create a new instance of the [`#struct_name`] tool handler.
///
/// Use this at registration time:
/// ```rust,ignore
/// server_builder.tool("#tool_name", #fn_name())
/// ```
pub fn echo() -> EchoTool {
    EchoTool {}
}
fn main() {
    let _ = echo;
}
